--- a/dpoy_ethan.ipynb
+++ b/dpoy_ethan.ipynb
@@ -770,6 +770,204 @@
    "source": [
     "print(full_data[['PLAYER', 'POSITION']].drop_duplicates().head(10))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd90c5ef",
+   "metadata": {},
+   "source": [
+    "### WORK IN PROGRESS ###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d13ecaf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prepared data with 1066 rows.\n",
+      "\n",
+      "--- Advanced Model Evaluation: Logistic Regression & Gradient Boosting ---\n",
+      "\n",
+      "Logistic Regression:\n",
+      "Classification Report (Logistic Regression):\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       False       1.00      0.84      0.91       206\n",
+      "        True       0.20      1.00      0.33         8\n",
+      "\n",
+      "    accuracy                           0.85       214\n",
+      "   macro avg       0.60      0.92      0.62       214\n",
+      "weighted avg       0.97      0.85      0.89       214\n",
+      "\n",
+      "ROC-AUC Score (Logistic Regression): 0.944\n",
+      "\n",
+      "Gradient Boosting Classifier:\n",
+      "Classification Report (Gradient Boosting):\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       False       0.96      0.98      0.97       206\n",
+      "        True       0.00      0.00      0.00         8\n",
+      "\n",
+      "    accuracy                           0.94       214\n",
+      "   macro avg       0.48      0.49      0.49       214\n",
+      "weighted avg       0.93      0.94      0.93       214\n",
+      "\n",
+      "ROC-AUC Score (Gradient Boosting): 0.879\n",
+      "\n",
+      "Feature Importance (Gradient Boosting):\n",
+      "       Feature  Importance\n",
+      "8    DEF_SCORE    0.338538\n",
+      "0          BLK    0.116992\n",
+      "3           GP    0.102354\n",
+      "6   STL_PER_36    0.097002\n",
+      "7  DREB_PER_36    0.080040\n",
+      "1          STL    0.079829\n",
+      "4          MIN    0.066466\n",
+      "5   BLK_PER_36    0.062675\n",
+      "2         DREB    0.056103\n"
+     ]
+    }
+   ],
+   "source": [
+    "#######WORK IN PROGRESS\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn.metrics import classification_report, roc_auc_score\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import pandas as pd\n",
+    "from nba_api.stats.endpoints import leagueleaders\n",
+    "\n",
+    "# Features to use for training\n",
+    "FEATURES = ['BLK', 'STL', 'DREB', 'GP', 'MIN', \n",
+    "           'BLK_PER_36', 'STL_PER_36', 'DREB_PER_36', 'DEF_SCORE']\n",
+    "\n",
+    "# Historical nominees for validation\n",
+    "actual_nominees = {\n",
+    "    '2023-24': ['Rudy Gobert', 'Bam Adebayo', 'Victor Wembanyama'],\n",
+    "    '2022-23': ['Jaren Jackson Jr.', 'Brook Lopez', 'Evan Mobley'],\n",
+    "    '2021-22': ['Marcus Smart', 'Mikal Bridges', 'Rudy Gobert'],\n",
+    "    '2020-21': ['Rudy Gobert', 'Ben Simmons', 'Draymond Green'],\n",
+    "    '2019-20': ['Giannis Antetokounmpo', 'Anthony Davis', 'Rudy Gobert'],\n",
+    "    '2018-19': ['Rudy Gobert', 'Paul George', 'Giannis Antetokounmpo'],\n",
+    "    '2017-18': ['Rudy Gobert', 'Joel Embiid', 'Anthony Davis'],\n",
+    "    '2016-17': ['Draymond Green', 'Rudy Gobert', 'Kawhi Leonard'],\n",
+    "    '2015-16': ['Kawhi Leonard', 'Draymond Green', 'Hassan Whiteside'],\n",
+    "    '2014-15': ['Kawhi Leonard', 'Draymond Green', 'DeAndre Jordan']\n",
+    "}\n",
+    "\n",
+    "# Function to collect and process data for a season\n",
+    "def get_season_data(season):\n",
+    "    blocks = leagueleaders.LeagueLeaders(\n",
+    "        season=season,\n",
+    "        stat_category_abbreviation='BLK',\n",
+    "        per_mode48='PerGame'\n",
+    "    ).get_data_frames()[0]\n",
+    "    \n",
+    "    steals = leagueleaders.LeagueLeaders(\n",
+    "        season=season,\n",
+    "        stat_category_abbreviation='STL',\n",
+    "        per_mode48='PerGame'\n",
+    "    ).get_data_frames()[0]\n",
+    "    \n",
+    "    def_reb = leagueleaders.LeagueLeaders(\n",
+    "        season=season,\n",
+    "        stat_category_abbreviation='DREB',\n",
+    "        per_mode48='PerGame'\n",
+    "    ).get_data_frames()[0]\n",
+    "    \n",
+    "    # Combine top players from each stat\n",
+    "    blocks = blocks[['PLAYER', 'TEAM', 'GP', 'MIN', 'BLK', 'DREB', 'STL']].head(50)\n",
+    "    steals = steals[['PLAYER', 'TEAM', 'GP', 'MIN', 'BLK', 'DREB', 'STL']].head(50)\n",
+    "    def_reb = def_reb[['PLAYER', 'TEAM', 'GP', 'MIN', 'BLK', 'DREB', 'STL']].head(50)\n",
+    "    \n",
+    "    all_players = pd.concat([blocks, steals, def_reb]).drop_duplicates(subset=['PLAYER'])\n",
+    "    \n",
+    "    # Calculate per-36 stats and defensive score\n",
+    "    for stat in ['BLK', 'STL', 'DREB']:\n",
+    "        all_players[f'{stat}_PER_36'] = all_players[stat] * 36 / all_players['MIN']\n",
+    "    \n",
+    "    all_players['DEF_SCORE'] = (\n",
+    "        all_players['BLK'] * 2 + \n",
+    "        all_players['STL'] * 2 + \n",
+    "        all_players['DREB'] * 0.5\n",
+    "    ) * (all_players['GP'] / 82)\n",
+    "    \n",
+    "    # Add nomination info\n",
+    "    all_players['ACTUAL_NOMINEE'] = all_players['PLAYER'].isin(actual_nominees.get(season, []))\n",
+    "    \n",
+    "    return all_players\n",
+    "\n",
+    "# Function to prepare the dataset for multiple seasons\n",
+    "def prepare_full_data():\n",
+    "    all_seasons_data = []\n",
+    "    for season in actual_nominees.keys():\n",
+    "        season_data = get_season_data(season)\n",
+    "        season_data['SEASON'] = season\n",
+    "        all_seasons_data.append(season_data)\n",
+    "    return pd.concat(all_seasons_data)\n",
+    "\n",
+    "# Train and evaluate Logistic Regression and Gradient Boosting models\n",
+    "def evaluate_advanced_models(full_data):\n",
+    "    print(\"\\n--- Advanced Model Evaluation: Logistic Regression & Gradient Boosting ---\")\n",
+    "    \n",
+    "    X = full_data[FEATURES]\n",
+    "    y = full_data['ACTUAL_NOMINEE']\n",
+    "    \n",
+    "    # Standardize the features\n",
+    "    scaler = StandardScaler()\n",
+    "    X = scaler.fit_transform(X)\n",
+    "    \n",
+    "    # Train-test split\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "    \n",
+    "    # Logistic Regression\n",
+    "    print(\"\\nLogistic Regression:\")\n",
+    "    lr_model = LogisticRegression(max_iter=1000, class_weight='balanced', random_state=42)\n",
+    "    lr_model.fit(X_train, y_train)\n",
+    "    y_pred_lr = lr_model.predict(X_test)\n",
+    "    y_proba_lr = lr_model.predict_proba(X_test)[:, 1]\n",
+    "    \n",
+    "    print(\"Classification Report (Logistic Regression):\")\n",
+    "    print(classification_report(y_test, y_pred_lr))\n",
+    "    print(f\"ROC-AUC Score (Logistic Regression): {roc_auc_score(y_test, y_proba_lr):.3f}\")\n",
+    "    \n",
+    "    # Gradient Boosting Classifier\n",
+    "    print(\"\\nGradient Boosting Classifier:\")\n",
+    "    gb_model = GradientBoostingClassifier(n_estimators=100, random_state=42)\n",
+    "    gb_model.fit(X_train, y_train)\n",
+    "    y_pred_gb = gb_model.predict(X_test)\n",
+    "    y_proba_gb = gb_model.predict_proba(X_test)[:, 1]\n",
+    "    \n",
+    "    print(\"Classification Report (Gradient Boosting):\")\n",
+    "    print(classification_report(y_test, y_pred_gb))\n",
+    "    print(f\"ROC-AUC Score (Gradient Boosting): {roc_auc_score(y_test, y_proba_gb):.3f}\")\n",
+    "    \n",
+    "    # Feature importance for Gradient Boosting\n",
+    "    feature_importance = pd.DataFrame({\n",
+    "        'Feature': FEATURES,\n",
+    "        'Importance': gb_model.feature_importances_\n",
+    "    }).sort_values('Importance', ascending=False)\n",
+    "    \n",
+    "    print(\"\\nFeature Importance (Gradient Boosting):\")\n",
+    "    print(feature_importance)\n",
+    "    \n",
+    "    return lr_model, gb_model\n",
+    "\n",
+    "# Main script to prepare data and evaluate models\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Prepare full dataset\n",
+    "    full_data = prepare_full_data()\n",
+    "    print(f\"Prepared data with {len(full_data)} rows.\")\n",
+    "    \n",
+    "    # Evaluate models\n",
+    "    lr_model, gb_model = evaluate_advanced_models(full_data)\n"
+   ]
   }
  ],
  "metadata": {
