Directory path update

--- a/notebooks/smoy_data_preparation.ipynb
+++ b/notebooks/smoy_data_preparation.ipynb
@@ -211,7 +211,7 @@
     "import os\n",
     "\n",
     "# Define file paths and load data\n",
-    "data_path = \"../unprocessed-player-data\"\n",
+    "data_path = \"../unprocessed-data\"\n",
     "season_file = \"nba_player_stats_2023-24.csv\" # 23-24 season for intial testing\n",
     "file_path = os.path.join(data_path, season_file)\n",
     "season_data = pd.read_csv(file_path)\n",
@@ -820,7 +820,7 @@
     "combined_data.loc[combined_data['Awards'].isna(), 'Awards'] = \"No Awards\"\n",
     "\n",
     "# Save combined dataframe to processed data directory\n",
-    "processed_data_path = \"../processed-player-data/combined_data.csv\"\n",
+    "processed_data_path = \"../processed-data/combined_data.csv\"\n",
     "combined_data.to_csv(processed_data_path, index=False)\n",
     "print(f\"Data saved to: {processed_data_path}\") # Confirmation\n",
     "\n",
