--- a/notebooks/smoy_modeling.ipynb
+++ b/notebooks/smoy_modeling.ipynb
@@ -373,7 +373,7 @@
     "import os\n",
     "\n",
     "# Define file paths and load data\n",
-    "data_path = \"../processed-player-data\"\n",
+    "data_path = \"../processed-data\"\n",
     "season_file = \"combined_data_w_target.csv\" # Combined dataset\n",
     "file_path = os.path.join(data_path, season_file)\n",
     "combined_data_w_target = pd.read_csv(file_path)\n",
