--- a/notebooks/smoy_preprocessing.ipynb
+++ b/notebooks/smoy_preprocessing.ipynb
@@ -373,7 +373,7 @@
     "import os\n",
     "\n",
     "# Define file paths and load data\n",
-    "data_path = \"../processed-player-data\"\n",
+    "data_path = \"../processed-data\"\n",
     "season_file = \"combined_data.csv\" # Combined dataset\n",
     "file_path = os.path.join(data_path, season_file)\n",
     "combined_data = pd.read_csv(file_path)\n",
@@ -2038,11 +2038,11 @@
     "eligible_players[['Player', 'Season', 'GS', 'G', 'MP', 'SMOY_Eligible', 'SMOY_Candidate', 'Awards']]\n",
     "\n",
     "# Save the eligible player data to a new CSV file\n",
-    "output_path = \"../processed-player-data/smoy_eligible_players.csv\"\n",
+    "output_path = \"../processed-data/smoy_eligible_players.csv\"\n",
     "eligible_players.to_csv(output_path, index=False)\n",
     "\n",
     "# Save combined data set with new target columns\n",
-    "combined_data_target_output_path = \"../processed-player-data/combined_data_w_target.csv\"\n",
+    "combined_data_target_output_path = \"../processed-data/combined_data_w_target.csv\"\n",
     "combined_data.to_csv(combined_data_target_output_path, index=False)\n",
     "\n",
     "# Confirm the data has been saved\n",
