Null value check for data

--- a/notebooks/smoy_data_preparation.ipynb
+++ b/notebooks/smoy_data_preparation.ipynb
@@ -2751,6 +2751,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of missing values in 'tGP' column: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check for missing values in 'tGP' column\n",
+    "missing_values = merged_data['tGP'].isnull().sum()\n",
+    "\n",
+    "# Print the result\n",
+    "print(f\"Number of missing values in 'tGP' column: {missing_values}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
    "outputs": [
