Small naming and logic changes

--- a/notebooks/smoy_preprocessing.ipynb
+++ b/notebooks/smoy_preprocessing.ipynb
@@ -2,9 +2,358 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Player</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Team</th>\n",
+       "      <th>Season</th>\n",
+       "      <th>tGP</th>\n",
+       "      <th>tW</th>\n",
+       "      <th>tL</th>\n",
+       "      <th>tW%</th>\n",
+       "      <th>Pos</th>\n",
+       "      <th>G</th>\n",
+       "      <th>...</th>\n",
+       "      <th>ORB</th>\n",
+       "      <th>DRB</th>\n",
+       "      <th>TRB</th>\n",
+       "      <th>AST</th>\n",
+       "      <th>STL</th>\n",
+       "      <th>BLK</th>\n",
+       "      <th>TOV</th>\n",
+       "      <th>PF</th>\n",
+       "      <th>PTS</th>\n",
+       "      <th>Awards</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Adrian Dantley</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>UTA</td>\n",
+       "      <td>1980</td>\n",
+       "      <td>82</td>\n",
+       "      <td>28</td>\n",
+       "      <td>54</td>\n",
+       "      <td>0.341</td>\n",
+       "      <td>SF</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6.4</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>30.7</td>\n",
+       "      <td>MVP-12,AS,NBA2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Moses Malone</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>HOU</td>\n",
+       "      <td>1980</td>\n",
+       "      <td>82</td>\n",
+       "      <td>40</td>\n",
+       "      <td>42</td>\n",
+       "      <td>0.488</td>\n",
+       "      <td>C</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>8.8</td>\n",
+       "      <td>14.8</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>27.8</td>\n",
+       "      <td>MVP-4,AS,NBA2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>George Gervin</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>SAS</td>\n",
+       "      <td>1980</td>\n",
+       "      <td>82</td>\n",
+       "      <td>52</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0.634</td>\n",
+       "      <td>SG</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>27.1</td>\n",
+       "      <td>MVP-5,AS,NBA1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Kareem Abdul-Jabbar</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>LAL</td>\n",
+       "      <td>1980</td>\n",
+       "      <td>82</td>\n",
+       "      <td>54</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0.659</td>\n",
+       "      <td>C</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>10.3</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>26.2</td>\n",
+       "      <td>MVP-3,AS,NBA1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>David Thompson</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>DEN</td>\n",
+       "      <td>1980</td>\n",
+       "      <td>82</td>\n",
+       "      <td>37</td>\n",
+       "      <td>45</td>\n",
+       "      <td>0.451</td>\n",
+       "      <td>SG</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>25.5</td>\n",
+       "      <td>No Awards</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21884</th>\n",
+       "      <td>Mac McClung</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>ORL</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>82</td>\n",
+       "      <td>17</td>\n",
+       "      <td>65</td>\n",
+       "      <td>0.207</td>\n",
+       "      <td>SG</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>No Awards</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21885</th>\n",
+       "      <td>Justin Minaya</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>POR</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>82</td>\n",
+       "      <td>8</td>\n",
+       "      <td>74</td>\n",
+       "      <td>0.098</td>\n",
+       "      <td>SF</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>No Awards</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21886</th>\n",
+       "      <td>Riley Minix</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>SAS</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>82</td>\n",
+       "      <td>13</td>\n",
+       "      <td>69</td>\n",
+       "      <td>0.159</td>\n",
+       "      <td>SF</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>No Awards</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21887</th>\n",
+       "      <td>Jalen Pickett</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>DEN</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>82</td>\n",
+       "      <td>14</td>\n",
+       "      <td>68</td>\n",
+       "      <td>0.171</td>\n",
+       "      <td>SG</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>No Awards</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21888</th>\n",
+       "      <td>Cole Swider</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>DET</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>82</td>\n",
+       "      <td>11</td>\n",
+       "      <td>71</td>\n",
+       "      <td>0.134</td>\n",
+       "      <td>SF</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>No Awards</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>21889 rows × 37 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Player   Age Team  Season  tGP  tW  tL    tW% Pos     G  \\\n",
+       "0           Adrian Dantley  25.0  UTA    1980   82  28  54  0.341  SF  80.0   \n",
+       "1             Moses Malone  25.0  HOU    1980   82  40  42  0.488   C  80.0   \n",
+       "2            George Gervin  28.0  SAS    1980   82  52  30  0.634  SG  82.0   \n",
+       "3      Kareem Abdul-Jabbar  33.0  LAL    1980   82  54  28  0.659   C  80.0   \n",
+       "4           David Thompson  26.0  DEN    1980   82  37  45  0.451  SG  77.0   \n",
+       "...                    ...   ...  ...     ...  ...  ..  ..    ...  ..   ...   \n",
+       "21884          Mac McClung  26.0  ORL    2024   82  17  65  0.207  SG   1.0   \n",
+       "21885        Justin Minaya  25.0  POR    2024   82   8  74  0.098  SF   1.0   \n",
+       "21886          Riley Minix  24.0  SAS    2024   82  13  69  0.159  SF   1.0   \n",
+       "21887        Jalen Pickett  25.0  DEN    2024   82  14  68  0.171  SG   2.0   \n",
+       "21888          Cole Swider  25.0  DET    2024   82  11  71  0.134  SF   2.0   \n",
+       "\n",
+       "       ...  ORB  DRB   TRB  AST  STL  BLK  TOV   PF   PTS          Awards  \n",
+       "0      ...  2.4  4.0   6.4  4.0  1.4  0.2  3.5  3.1  30.7  MVP-12,AS,NBA2  \n",
+       "1      ...  5.9  8.8  14.8  1.8  1.0  1.9  3.9  2.8  27.8   MVP-4,AS,NBA2  \n",
+       "2      ...  1.5  3.6   5.1  3.2  1.1  0.7  3.1  2.6  27.1   MVP-5,AS,NBA1  \n",
+       "3      ...  2.5  7.8  10.3  3.4  0.7  2.9  3.1  3.1  26.2   MVP-3,AS,NBA1  \n",
+       "4      ...  1.4  2.3   3.7  3.0  0.7  0.8  3.2  3.0  25.5       No Awards  \n",
+       "...    ...  ...  ...   ...  ...  ...  ...  ...  ...   ...             ...  \n",
+       "21884  ...  0.0  1.0   1.0  2.0  0.0  0.0  0.0  0.0   0.0       No Awards  \n",
+       "21885  ...  0.0  1.0   1.0  0.0  0.0  0.0  0.0  1.0   0.0       No Awards  \n",
+       "21886  ...  0.0  2.0   2.0  0.0  0.0  0.0  0.0  0.0   0.0       No Awards  \n",
+       "21887  ...  0.0  0.0   0.0  0.0  0.0  0.0  0.0  0.0   0.0       No Awards  \n",
+       "21888  ...  0.0  1.0   1.0  0.5  0.0  0.0  0.0  0.5   0.0       No Awards  \n",
+       "\n",
+       "[21889 rows x 37 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Import libraries\n",
     "import pandas as pd\n",
@@ -20,15 +369,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Player</th>\n",
+       "      <th>Team</th>\n",
+       "      <th>Season</th>\n",
+       "      <th>tGP</th>\n",
+       "      <th>tW</th>\n",
+       "      <th>tL</th>\n",
+       "      <th>tW%</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>20231</th>\n",
+       "      <td>Immanuel Quickley</td>\n",
+       "      <td>NYK</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>82</td>\n",
+       "      <td>47</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0.573</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13305</th>\n",
+       "      <td>Thaddeus Young</td>\n",
+       "      <td>PHI</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>82</td>\n",
+       "      <td>41</td>\n",
+       "      <td>41</td>\n",
+       "      <td>0.500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12874</th>\n",
+       "      <td>Kyle Lowry</td>\n",
+       "      <td>HOU</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>82</td>\n",
+       "      <td>42</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0.512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10728</th>\n",
+       "      <td>Derek Fisher</td>\n",
+       "      <td>GSW</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>82</td>\n",
+       "      <td>34</td>\n",
+       "      <td>48</td>\n",
+       "      <td>0.415</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8283</th>\n",
+       "      <td>Aaron McKie</td>\n",
+       "      <td>PHI</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>82</td>\n",
+       "      <td>56</td>\n",
+       "      <td>26</td>\n",
+       "      <td>0.683</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5469</th>\n",
+       "      <td>Anthony Mason</td>\n",
+       "      <td>NYK</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>82</td>\n",
+       "      <td>55</td>\n",
+       "      <td>27</td>\n",
+       "      <td>0.671</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14946</th>\n",
+       "      <td>Mo Williams</td>\n",
+       "      <td>POR</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>82</td>\n",
+       "      <td>54</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0.659</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7762</th>\n",
+       "      <td>Cedric Ceballos</td>\n",
+       "      <td>DAL</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>82</td>\n",
+       "      <td>40</td>\n",
+       "      <td>42</td>\n",
+       "      <td>0.488</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16164</th>\n",
+       "      <td>Patrick Patterson</td>\n",
+       "      <td>TOR</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>82</td>\n",
+       "      <td>56</td>\n",
+       "      <td>26</td>\n",
+       "      <td>0.683</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13836</th>\n",
+       "      <td>J.R. Smith</td>\n",
+       "      <td>NYK</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>66</td>\n",
+       "      <td>36</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0.545</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Player Team  Season  tGP  tW  tL    tW%\n",
+       "20231  Immanuel Quickley  NYK    2022   82  47  35  0.573\n",
+       "13305     Thaddeus Young  PHI    2010   82  41  41  0.500\n",
+       "12874         Kyle Lowry  HOU    2009   82  42  40  0.512\n",
+       "10728       Derek Fisher  GSW    2005   82  34  48  0.415\n",
+       "8283         Aaron McKie  PHI    2000   82  56  26  0.683\n",
+       "5469       Anthony Mason  NYK    1994   82  55  27  0.671\n",
+       "14946        Mo Williams  POR    2013   82  54  28  0.659\n",
+       "7762     Cedric Ceballos  DAL    1999   82  40  42  0.488\n",
+       "16164  Patrick Patterson  TOR    2015   82  56  26  0.683\n",
+       "13836         J.R. Smith  NYK    2011   66  36  30  0.545"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Add SMOY Target for TOP 3 SMOY candidates\n",
     "combined_data['SMOY_Candidate'] = combined_data['Awards'].apply(lambda x: 1 if '6MOY-1' in str(x) or '6MOY-2' in str(x) or '6MOY-3' in str(x) else 0)\n",
     "\n",
     "# Display \n",
-    "combined_data[['Player', 'Season', 'Awards', 'SMOY_Candidate']].head()\n"
+    "combined_data[(combined_data['SMOY_Candidate'] == 1) | \n",
+    "              (combined_data['SMOY_Candidate'] == 2) | \n",
+    "              (combined_data['SMOY_Candidate'] == 3)][['Player', 'Team', 'Season', 'SMOY_Candidate', 'Awards']].sample(n=10)\n"
    ]
   },
   {
